# Face-Recognition-Attendance-System

./: .gitignore  README.md  docker-compose.gpu.yml  docker-compose.yml
api-service/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
api-service/alembic/: env.py
api-service/alembic/versions/: f90bf24df45c_initial_attendance_schema.py
api-service/docs/: database.dbml  database.sql  database_sqlcrack_queries.sql  database_sqlcrack_schema.sql
api-service/src/: main.py
api-service/src/api/v1/: routers.py
api-service/src/api/v1/shared/: datetime_utils.py  enums.py
api-service/src/core/: exception_handlers.py  exceptions.py
api-service/src/core/bootstrap/: admin_seed.py
api-service/src/core/cache/: redis_client.py
api-service/src/core/clients/face_server/: clients.py  schemas.py
api-service/src/core/configs/: settings.py
api-service/src/core/db/: database.py  model_registry.py
api-service/src/core/dependencies/: auth.py  dep.py
api-service/src/core/email/: email.py
api-service/src/core/middleware/: logging_middleware.py  timing_middleware.py
api-service/src/core/security/: authentication.py
api-service/src/utils/: exeptions.py
attendance-service/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt  run.py  testgpu.py
attendance-service/Silent-Face-Anti-Spoofing/src_Antispoofting/: anti_spoof_predict.py
attendance-service/app/: main.py
attendance-service/app/api/v1/: router.py
attendance-service/app/core/clients/api_server/: __init__.py  client.py  schemas.py
attendance-service/app/core/configs/: settings.py
attendance-service/app/core/dependencies/: dep.py
attendance-service/app/core/ml/: Detector.py  Embedder.py
attendance-service/app/core/pipeline/: attendance_pipline.py  pipe_processor.py
attendance-service/app/core/utils_ml_pipeline/: read_camera.py
attendance-service/app/core/vector_db/: qdrant_repo.py  schemas.py
(+164 files in other folders)
